# wallet_generator

./: Cargo.toml  readme.md
src/: main.rs
