[package]
name = "wallet_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.22.1", features = ["rand"] }
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version= "1", features = ["full"] }
web3 = "=0.17.0"
bip39 = "1.0.1"
rand = "=0.6"
tiny-keccak = { version = "1.4" }
rustc-hex = "2.1.0"
tiny-hderive = "0.3.0"